--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 #Home{
   background-image: url('http://everystockphoto.s3.amazonaws.com/sunset_earthday_iceplant_677600_o.jpg');
   background-attachment: fixed;
-  min-height: 800px;
+  min-height: 1000px;
   margin-bottom: 0px;
   text-align: center;
   color: white;
@@ -9,28 +9,31 @@
 #AboutMe{
   background-image: url('http://s3.amazonaws.com/estock/fspid11/98/49/33/nimes-arena-romanempire-984933-o.jpg');
   background-attachment: fixed;
-  min-height: 930px;
+  min-height: 950px;
   margin-bottom: 0px;
   color: white;
 }
 #Projects{
   background-image: url('http://s3.amazonaws.com/estock/fspid2/291400/building-saarland-germany-291499-o.jpg');
   background-attachment: fixed;
-  min-height: 930px;
+  min-height: 950px;
   margin-bottom: 0px;
   text-align: center;
   color: white;
 }
 #ContactMe{
-  background-image: url('http://s3.amazonaws.com/estock_dev/fspid13/48/26/88/ginza-handheld-hdri-482688-o.jpg');
+  background-image: url('http://s3.amazonaws.com/estock/fspid5/406700/deutschland-germany-europe-406771-o.jpg');
   background-attachment: fixed;
-  min-height: 930px;
+  min-height: 950px;
   margin-bottom: 0px;
   text-align: center;
   color: white;
 }
-#mainnav{
-  color: white;
+.navbar{
+  background-color: transparent;
+  background: transparent;
+  border-color: transparent;
+  box-shadow: none;
 }
 .navbar-nav{
   width:100%;
@@ -42,7 +45,7 @@
   float: none;
   display: inline-block;
 }
-.navbar-fnt{
-  color: white;
+.navbar-default .navbar-nav >li >a{
+  color: #fff;
 }
 /*http://www.everystockphoto.com/photo.php?imageId=677600&searchId=6cad826248cd3f4e93da71e7b49928e3&npos=11*/
