About Me image change

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@
   margin-bottom: 0px;
 
   color: white;
-  background-image: url('../images/AboutMe.jpeg');
+  background-image: url('../images/AboutMe.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
