--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
   text-align: center;
 
   color: white;
-  background-image: url('../images/pexels-photo.jpg');
+  background-image: url('../images/pexels-photo.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -43,7 +43,7 @@
   margin-bottom: 0px;
 
   color: white;
-  background-image: url('../images/pexels-photo-230872.jpg');
+  background-image: url('../images/pexels-photo-230872.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
